modifications to the navbar

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="description" content=" Impala Law Associates and Legal Services. We are Expert Into UAE Law.">
+	<meta name="keywords" content="Civil Law, Corporate Law, Sharia Law, Banking and Finance Law, Business Law, Family Law, Employment Law, Common Law Criminal Law">
+	<meta name="author" content="impalalaw.com">
+	<meta name="author" content="impalalaw.com">
     <title>IMPALA LAW ASSOCIATES & LEGAL SERVICES | HOME</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet" />
@@ -147,8 +151,8 @@
           <div class="auto-container clearfix">
             <!--Logo-->
             <div class="logo pull-left">
-              <a href="index.html"
-                ><img src="images/logo.png" class="nav-logo-img"
+              <a href="index.html" title=""
+                ><img src="../images/logo.png" class="logo-img"
               /></a>
             </div>
             <!--Right Col-->
@@ -163,7 +167,7 @@
               <div class="outer-box clearfix">
                 <!-- Btn Box -->
                 <div class="btn-box">
-                  <a href="pages/contact.html" class="theme-btn btn-style-two"
+                  <a href="contact.html" class="theme-btn btn-style-two" style="top: 10px;"
                     ><span class="txt">Contact US</span></a
                   >
                 </div>
