--- a/pages/about.html
+++ b/pages/about.html
@@ -200,7 +200,7 @@
               <div class="outer-box clearfix">
                 <!-- Btn Box -->
                 <div class="btn-box">
-                  <a href="contact.html" class="theme-btn btn-style-two"
+                  <a href="contact.html" class="theme-btn btn-style-two" style="top: 10px;"
                     ><span class="txt">Contact US</span></a
                   >
                 </div>
@@ -270,7 +270,7 @@
                     data-wow-delay="0ms"
                     data-wow-duration="1500ms"
                   >
-                    <img src="../images/resource/case-1.jpg" class="long-img"/>
+                    <img src="../images/resource/case-1.jpg" class="long-img" style="height: 1020px;"/>
                   </div>
                 </div>
               </div>
