--- a/pages/our_services.html
+++ b/pages/our_services.html
@@ -204,7 +204,7 @@
               <div class="outer-box clearfix">
                 <!-- Btn Box -->
                 <div class="btn-box">
-                  <a href="contact.html" class="theme-btn btn-style-two"
+                  <a href="contact.html" class="theme-btn btn-style-two" style="top: 10px;"
                     ><span class="txt">Contact US</span></a
                   >
                 </div>
