--- a/pages/contact.html
+++ b/pages/contact.html
@@ -186,7 +186,7 @@
           <div class="auto-container clearfix">
             <!--Logo-->
             <div class="logo pull-left">
-              <a href="index.html" title=""
+              <a href="../index.html" title=""
                 ><img src="../images/logo.png" class="logo-img"
               /></a>
             </div>
@@ -202,7 +202,10 @@
               <div class="outer-box clearfix">
                 <!-- Btn Box -->
                 <div class="btn-box">
-                  <a href="contact.html" class="theme-btn btn-style-two"
+                  <a
+                    href="contact.html"
+                    class="theme-btn btn-style-two"
+                    style="top: 10px"
                     ><span class="txt">Contact US</span></a
                   >
                 </div>
