final changes to the project

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta name="description" content=" Impala Law Associates and Legal Services. We are Expert Into UAE Law.">
+  <meta charset="utf-8" />
+  <meta name="description" content=" Impala Law Associates and Legal Services. We are Expert Into UAE Law.">
 	<meta name="keywords" content="Civil Law, Corporate Law, Sharia Law, Banking and Finance Law, Business Law, Family Law, Employment Law, Common Law Criminal Law">
 	<meta name="author" content="impalalaw.com">
 	<meta name="author" content="impalalaw.com">
@@ -86,28 +86,8 @@
                     <li>
                       <a href="pages/about.html">About Us</a>
                     </li>
-                    <li class="dropdown">
-                      <a href="#">Our Services</a>
-                      <ul>
-                        <li>
-                        <a href="pages/our_services.html">Our Services</a>
-                      </li>
-                        <li>
-                          <a href="pages/our_services.html#corporate">Corporate and Commercial Law</a>
-                        </li>
-                        <li>
-                          <a href="pages/our_services.html#real">Real Estate and Construction</a>
-                        </li>
-                        <li><a href="pages/our_services.html#litigation">Litigation and Dispute Resolution</a></li>
-                        <li>
-                          <a href="pages/our_services.html#banking">Banking and Finance</a>
-                        </li>
-                        <li><a href="pages/our_services.html#employment">Employment Law</a></li>
-                        <li><a href="pages/our_services.html#family">Family Law</a></li>
-                        <li><a href="pages/our_services.html#immigration">Immigration and Visa Services</a></li>
-                        <li><a href="pages/our_services.html#remove">Removing all Kind of Absconding cases</a></li>
-                        <li><a href="pages/our_services.html#legal">Legal Drafting Services</a></li>
-                      </ul>
+                    <li>
+                      <a href="pages/our_services.html">Our Services</a>
                     </li>
                     <li class="dropdown">
                       <a href="#">Our Team</a>
@@ -235,7 +215,7 @@
                     Impala Law Associates & Legal Services
                   </div>
                   <h1>Introduction</h1>
-                  <div class="text">
+                  <div class="text text-justify">
                     If you require legal services in the UAE or seek guidance on
                     any legal matter, please don't hesitate to contact Impala
                     Law Associates and Legal Services. We are ready to assist
@@ -272,7 +252,7 @@
                     Impala Law Associates & Legal Services
                   </div>
                   <h1>About Company</h1>
-                  <div class="text">
+                  <div class="text text-justify">
                     Impala Law Associates and Legal Services
                     is a prominent and dynamic law firm
                     headquartered in the United Arab Emirates
@@ -310,7 +290,7 @@
                     Impala Law Associates & Legal Services
                   </div>
                   <h1>Our Mission</h1>
-                  <div class="text">
+                  <div class="text text-justify">
                     Our mission is to provide exceptional
                     legal services, tailored
                     to the unique needs of
@@ -356,7 +336,7 @@
                         >Corporate and Commercial Law</a
                       >
                     </h4>
-                    <div class="text">
+                    <div class="text text-justify">
                       We provide expert advice on corporate governance, mergers
                       and acquisitions, contract drafting and negotiation,
                       intellectual property, and regulatory compliance, among
@@ -381,7 +361,7 @@
                         >Real Estate and Construction</a
                       >
                     </h4>
-                    <div class="text">
+                    <div class="text text-justify">
                       Impala Law Associates excels in real estate and construction law, ensuring seamless transactions, property development, and comprehensive support in construction contracts.
                     </div>
                   </div>
@@ -403,7 +383,7 @@
                         >Litigation and Dispute Resolution</a
                       >
                     </h4>
-                    <div class="text">
+                    <div class="text text-justify">
                       We offer effective representation in civil, commercial,
                       and criminal litigation, as well as alternative dispute
                       resolution methods such as arbitration and mediation.
@@ -425,7 +405,7 @@
                     <h4>
                       <a href="banking_law.html">Banking and Finance</a>
                     </h4>
-                    <div class="text">
+                    <div class="text text-justify">
                       Impala Law Associates offers specialized legal support in banking and finance, covering matters like debt restructuring, regulatory compliance, and comprehensive financial guidance for clients
                     </div>
                   </div>
@@ -441,7 +421,7 @@
       <!-- Welcome Section -->
       <section
         class="welcome-section"
-        style="background-image: url(images/background/pattern-1.png)"
+        style="background-image: url(images/background/pattern-1.png); padding: 0;"
       >
         <div class="auto-container">
           <div class="inner-container">
@@ -462,7 +442,7 @@
                   <!-- Sec Title -->
                   <div class="sec-title">
                     <h2>Our Services</h2>
-                    <div class="text">
+                    <div class="text text-justify">
                       At Impala Law Associates and Legal Services, we offer a
                       wide range of legal services to individuals, businesses,
                       and organizations. Our practice areas include but are not
@@ -502,7 +482,7 @@
       <!-- Practice Section -->
       <section
         class="practice-section"
-        style="background-image: url(images/background/pattern-2.png)"
+        style="background-image: url(images/background/pattern-2.png); padding: 0;"
       >
         <div class="auto-container">
           <!-- Sec Title -->
@@ -521,7 +501,7 @@
                         >corporate & commercial law</a
                       >
                     </h5>
-                    <div class="text">
+                    <div class="text text-justify">
                       Expert advice on governance, mergers, contracts, IP, and regulatory compliance.
                     </div>
                     <a
@@ -540,7 +520,7 @@
                         >Real Estate and Construction</a
                       >
                     </h5>
-                    <div class="text">
+                    <div class="text text-justify">
                       Team handles real estate, development, contracts, and sector dispute resolution.
                     </div>
                     <a
@@ -559,7 +539,7 @@
                         >Litigation and Dispute Resolution</a
                       >
                     </h5>
-                    <div class="text">
+                    <div class="text text-justify">
                       Expert in litigation, arbitration, mediation, and alternative dispute resolution.
                     </div>
                     <a
@@ -576,7 +556,7 @@
                     <h5>
                       <a href="banking_law.html">Banking and Finance</a>
                     </h5>
-                    <div class="text">
+                    <div class="text text-justify">
                       Specialists offer legal support in banking, finance, debt, and compliance, get help and guidence from here.
                     </div>
                     <a
@@ -591,7 +571,7 @@
                   <div class="inner-box">
                     <div class="icon flaticon-injury"></div>
                     <h5><a href="employment_law.html">Employment Law</a></h5>
-                    <div class="text">
+                    <div class="text text-justify">
                       We assist both employers and employees with employment
                       contracts, labor disputes, and compliance with UAE labor
                       laws.
@@ -612,7 +592,7 @@
                         >Immigration and Visa Services</a
                       >
                     </h5>
-                    <div class="text">
+                    <div class="text text-justify">
                       We offer immigration consulting services, helping clients
                       navigate the complexities of UAE immigration laws.
                     </div>
@@ -628,7 +608,7 @@
                   <div class="inner-box">
                     <div class="icon flaticon-balance"></div>
                     <h5><a href="family_law.html">Family Law</a></h5>
-                    <div class="text">
+                    <div class="text text-justify">
                       Our family law experts handle divorce, child custody,
                       marriage contracts, and related matters with sensitivity
                       and professionalism. <br>
@@ -649,7 +629,7 @@
                         >Removing all Kind of Absconding cases</a
                       >
                     </h5>
-                    <div class="text">
+                    <div class="text text-justify">
                       We Help client to remove any kind of Abscond or any Legal
                       cased related to Dubai Court, Abu Dhabi Court, Sharjah,
                       Alain, all within UAE.
@@ -666,14 +646,14 @@
       <!-- End Practice Section -->
       
        <!-- Team Section -->
-      <section class="team-section" style="background-image: url(images/background/pattern-1.png)">
+      <section class="team-section" style="background-image: url(images/background/pattern-1.png); padding: 0;">
       <div class="auto-container">
         <div class="inner-container">
           <div class="row">
             <div class="content-column  col-lg-6 col-md-12 col-sm-12">
               <div class="custom-styling mt-5">
                 <div class="sec-title"><h2>Our Team</h2></div>
-                  <div class="text">
+                  <div class="text text-justify">
                     Our team of dedicated and skilled
                     attorneys, legal consultants, and
                     support staff bring a wealth of
@@ -689,7 +669,7 @@
             <div class="content-column  col-lg-6 col-md-12 col-sm-12">
               <div class="custom-styling mt-5">
                 <div class="sec-title"><h2>Client-Centric Approach</h2></div>
-              <div class="text">
+              <div class="text text-justify">
                 We prioritize our clients' interests
                 and maintain open and
                 transparent communication
@@ -703,11 +683,11 @@
               </div>
             </div>
           </div>
-          <div class="row">
+          <div class="row py-5">
               <div class="content-column  col-lg-6 col-md-12 col-sm-12">
                 <div class="custom-styling mt-5">
                 <div class="sec-title"><h2>Global Reach</h2></div>
-                    <div class="text">
+                    <div class="text text-justify">
                       While based in the UAE, Impala
                       Law Associates and Legal Services
                       has an extensive network of
@@ -720,7 +700,7 @@
             <div class="content-column  col-lg-6 col-md-12 col-sm-12">
               <div class="custom-styling mt-5">
                 <div class="sec-title"><h2>Commitment to Ethics & Excellence</h2></div>
-              <div class="text">
+              <div class="text text-justify">
                 Our commitment to the highest
                 ethical standards and excellence
                 in the practice of law is
@@ -760,7 +740,7 @@
                           ><img src="images/logo.png" alt="" class="small-logo-img"
                         /></a>
                       </div>
-                      <div class="text">
+                      <div class="text text-justify">
                         For reliable legal assistance, contact Impala Law Associates.
                       </div>
                       <!-- Social Nav -->
@@ -831,7 +811,7 @@
                   <div class="footer-column col-lg-6 col-md-6 col-sm-12">
                     <div class="footer-widget newsletter-widget">
                       <h5>Subscribe Now</h5>
-                      <div class="text">
+                      <div class="text text-justify">
                         Give us a call, send an email, or drop by for a chat. We’re always happy to help navigate your legal journey and ensure you feel informed and empowered every step of the way.
                       </div>
                       <div class="newsletter-form">
