--- a/pages/about.html
+++ b/pages/about.html
@@ -86,56 +86,8 @@
                     <li>
                       <a href="#" class="active-btn">About Us</a>
                     </li>
-                    <li class="dropdown">
-                      <a href="#">Our Services</a>
-                      <ul>
-                        <li>
-                          <a href="our_services.html">Our Services</a>
-                        </li>
-                        <li>
-                          <a href="our_services.html#corporate"
-                            >Corporate and Commercial Law</a
-                          >
-                        </li>
-                        <li>
-                          <a href="our_services.html#real"
-                            >Real Estate and Construction</a
-                          >
-                        </li>
-                        <li>
-                          <a href="our_services.html#litigation"
-                            >Litigation and Dispute Resolution</a
-                          >
-                        </li>
-                        <li>
-                          <a href="our_services.html#banking"
-                            >Banking and Finance</a
-                          >
-                        </li>
-                        <li>
-                          <a href="our_services.html#employment"
-                            >Employment Law</a
-                          >
-                        </li>
-                        <li>
-                          <a href="our_services.html#family">Family Law</a>
-                        </li>
-                        <li>
-                          <a href="our_services.html#immigration"
-                            >Immigration and Visa Services</a
-                          >
-                        </li>
-                        <li>
-                          <a href="our_services.html#remove"
-                            >Removing all Kind of Absconding cases</a
-                          >
-                        </li>
-                        <li>
-                          <a href="our_services.html#legal"
-                            >Legal Drafting Services</a
-                          >
-                        </li>
-                      </ul>
+                    <li>
+                      <a href="our_services.html">Our Services</a>
                     </li>
                     <li class="dropdown">
                       <a href="our_team.html">Our Team</a>
@@ -225,7 +177,7 @@
           <nav class="menu-box">
             <div class="nav-logo">
               <a href="../index.html"
-                ><img src="../images/logo-2.png" alt="" title=""
+                ><img src="../images/logo-2.png" 
               /></a>
             </div>
             <div class="menu-outer">
@@ -264,22 +216,23 @@
             <div class="clearfix">
               <!-- Image Column -->
               <div class="image-column col-lg-6 col-md-12 col-sm-12">
-                <div class="inner-column">
+                <div class="inner-column" style="height: 100%;">
                   <div
                     class="image wow fadeInLeft"
                     data-wow-delay="0ms"
                     data-wow-duration="1500ms"
+                    style="height: 100%;"
                   >
-                    <img src="../images/resource/case-1.jpg" class="long-img" style="height: 1020px;"/>
+                    <img src="../images/resource/case-1.jpg" class="long-img" style="height: 100%; object-fit: cover;"/>
                   </div>
                 </div>
               </div>
 
               <!-- Content Column -->
               <div class = "content-column col-lg-6 col-md-12 col-sm-12">
-                <div class="inner-column">
+                <div class="inner-column" style="padding: 0 50px;">
                   <!-- Sec Title -->
-                  <div class="sec-title">
+                  <div class="sec-title" style="padding-top: 30px">
                     <h2>
                       We specialise in <br />
                       All Type of cases
@@ -354,7 +307,7 @@
               >
                 <div class="icon flaticon-auction"></div>
                 <h5><a href="corporate_law.html">Legal Services</a></h5>
-                <div class="text">
+                <div class="text text-justify">
                   We’re not just lawyers—we’re your legal partners. We’ll be by
                   your side every step of the way, working hard to get you the
                   best results possible.
@@ -377,7 +330,7 @@
               >
                 <div class="icon flaticon-law"></div>
                 <h5><a href="corporate_law.html">Great Results</a></h5>
-                <div class="text">
+                <div class="text text-justify">
                   We’ve helped countless clients achieve their legal goals. We
                   have a deep understanding of the law and the experience to
                   navigate even the most complex cases.
@@ -398,7 +351,7 @@
               >
                 <div class="icon flaticon-marketing"></div>
                 <h5><a href="corporate_law.html">Passionate People</a></h5>
-                <div class="text">
+                <div class="text text-justify">
                   We’re passionate about the law and about helping people. We
                   believe everyone deserves access to quality legal
                   representation, and we’re committed to making that happen.
@@ -429,7 +382,7 @@
                 We are experienced and have a proven track record of
                 success. We know what we’re doing and we’ve got the
                 results to show for it.
-              </li>
+              </li> 
               <li>
                 We are passionate about what we do. We care about our
                 clients and we’re committed to helping them achieve their
