--- a/pages/our_team.html
+++ b/pages/our_team.html
@@ -86,57 +86,11 @@
                     <li>
                       <a href="about.html">About Us</a>
                     </li>
-                    <li class="dropdown">
+
+                    <li>
                       <a href="our_services.html">Our Services</a>
-                      <ul>
-                        <li>
-                          <a href="our_services.html">Our Services</a>
-                        </li>
-                        <li>
-                          <a href="our_services.html#corporate"
-                            >Corporate and Commercial Law</a
-                          >
-                        </li>
-                        <li>
-                          <a href="our_services.html#real"
-                            >Real Estate and Construction</a
-                          >
-                        </li>
-                        <li>
-                          <a href="our_services.html#litigation"
-                            >Litigation and Dispute Resolution</a
-                          >
-                        </li>
-                        <li>
-                          <a href="our_services.html#banking"
-                            >Banking and Finance</a
-                          >
-                        </li>
-                        <li>
-                          <a href="our_services.html#employment"
-                            >Employment Law</a
-                          >
-                        </li>
-                        <li>
-                          <a href="our_services.html#family">Family Law</a>
-                        </li>
-                        <li>
-                          <a href="our_services.html#immigration"
-                            >Immigration and Visa Services</a
-                          >
-                        </li>
-                        <li>
-                          <a href="our_services.html#remove"
-                            >Removing all Kind of Absconding cases</a
-                          >
-                        </li>
-                        <li>
-                          <a href="our_services.html#legal"
-                            >Legal Drafting Services</a
-                          >
-                        </li>
-                      </ul>
                     </li>
+
                     <li class="dropdown">
                       <a href="#" class="active-btn">Our Team</a>
                       <ul>
@@ -263,7 +217,9 @@
       <!-- End Page Title -->
 
       <div class="auto-container">
-        <section class="services-page-section" id="team">
+        <!-- Services Block Three -->
+
+        <section class="services-page-section my-4" id="global">
           <div class="services-block-three style-two">
             <div
               class="inner-box wow fadeInUp"
@@ -272,23 +228,25 @@
             >
               <div class="row clearfix">
                 <!-- Image Column -->
-                <div class="image-column col-lg-6 col-md-12 col-sm-12">
-                  <div class="inner-column">
-                    <div class="image">
+                <div
+                  class="image-column col-lg-6 col-md-12 col-sm-12"
+                  style="height: 480px"
+                >
+                  <div class="inner-column" style="height: 100%">
+                    <div class="image" style="height: 100%">
                       <a href="our_team.html"
                         ><img
                           src="../images/resource/team-1.jpg"
-                          style="height: 600px"
-                          ;
+                          class="unequal-img"
                       /></a>
                     </div>
                   </div>
                 </div>
                 <!-- Content Column -->
                 <div class="content-column col-lg-6 col-md-12 col-sm-12">
-                  <div class="inner-column">
+                  <div class="inner-column" style="padding: 30px 50px">
                     <h2><a href="our_team.html">Our Team</a></h2>
-                    <div class="text">
+                    <div class="text text-justify">
                       At Impala Law Firm, our strength lies not only in legal
                       expertise but also in the collective passion of our
                       diverse team. United by a shared commitment, we prioritize
@@ -309,55 +267,54 @@
           </div>
         </section>
 
-        <!-- Services Block Three -->
-        <section class="services-page-section" id="client">
+        <section class="services-page-section my-5" id="immigration">
           <div class="services-block-three">
             <div
               class="inner-box wow fadeInUp"
               data-wow-delay="0ms"
               data-wow-duration="1500ms"
             >
-              <section id="client">
-                <div class="row clearfix">
-                  <!-- Content Column -->
-                  <div class="content-column col-lg-6 col-md-12 col-sm-12">
-                    <div class="inner-column">
-                      <h2>
-                        <a href="our_team.html">Client-Centric Approach</a>
-                      </h2>
-                      <div class="text">
-                        Impala Law Associates stands out with a client-centric
-                        approach, actively listening and comprehending
-                        individual needs and goals. Their unique strength lies
-                        in customizing legal strategies to address each client's
-                        specific requirements. By prioritizing a personalized
-                        approach, Impala Law Associates ensures a tailored and
-                        effective resolution for every case. Choose them for
-                        legal assistance that aligns seamlessly with your
-                        distinct needs and objectives.
-                      </div>
-                    </div>
-                  </div>
-                  <!-- Image Column -->
-                  <div class="image-column col-lg-6 col-md-12 col-sm-12">
-                    <div class="inner-column">
-                      <div class="image">
-                        <a href="our_team.html"
-                          ><img
-                            src="../images/resource/team-2.jpg"
-                            style="height: 600px"
-                            ;
-                        /></a>
-                      </div>
+              <div class="row clearfix">
+                <!-- Content Column -->
+                <div class="content-column col-lg-6 col-md-12 col-sm-12">
+                  <div class="inner-column" style="padding: 30px 50px">
+                    <h2>
+                      <a href="our_services.html">Client-Centric Approach</a>
+                    </h2>
+                    <div class="text text-justify">
+                      Impala Law Associates stands out with a client-centric
+                      approach, actively listening and comprehending individual
+                      needs and goals. Their unique strength lies in customizing
+                      legal strategies to address each client's specific
+                      requirements. By prioritizing a personalized approach,
+                      Impala Law Associates ensures a tailored and effective
+                      resolution for every case. Choose them for legal
+                      assistance that aligns seamlessly with your distinct needs
+                      and objectives.
                     </div>
                   </div>
                 </div>
-              </section>
+                <!-- Image Column -->
+                <div
+                  class="image-column col-lg-6 col-md-12 col-sm-12"
+                  style="height: 480px"
+                >
+                  <div class="inner-column" style="height: 100%">
+                    <div class="image" style="height: 100%">
+                      <a href="our_services.html"
+                        ><img
+                          src="../images/resource/team-2.jpg"
+                          class="unequal-img"
+                      /></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </section>
 
-        <section class="services-page-section" id="global">
+        <section class="services-page-section my-4" id="global">
           <div class="services-block-three style-two">
             <div
               class="inner-box wow fadeInUp"
@@ -366,23 +323,25 @@
             >
               <div class="row clearfix">
                 <!-- Image Column -->
-                <div class="image-column col-lg-6 col-md-12 col-sm-12">
-                  <div class="inner-column">
-                    <div class="image">
+                <div
+                  class="image-column col-lg-6 col-md-12 col-sm-12"
+                  style="height: 480px"
+                >
+                  <div class="inner-column" style="height: 100%">
+                    <div class="image" style="height: 100%">
                       <a href="our_team.html"
                         ><img
                           src="../images/resource/team-3.jpg"
-                          style="height: 600px"
-                          ;
+                          class="unequal-img"
                       /></a>
                     </div>
                   </div>
                 </div>
                 <!-- Content Column -->
                 <div class="content-column col-lg-6 col-md-12 col-sm-12">
-                  <div class="inner-column">
+                  <div class="inner-column" style="padding: 30px 50px">
                     <h2><a href="our_team.html">Global Reach</a></h2>
-                    <div class="text">
+                    <div class="text text-justify">
                       Impala Law Associates boasts a global reach, extending
                       their services internationally. With a commitment to
                       understanding clients' specific needs and goals, they
@@ -400,8 +359,8 @@
           </div>
         </section>
 
-        <section class="services-page-section" id="commitment">
-          <div class="services-block-three">
+        <section class="services-page-section my-5" id="immigration">
+          <div class="services-block-three" id="immigration">
             <div
               class="inner-box wow fadeInUp"
               data-wow-delay="0ms"
@@ -410,13 +369,13 @@
               <div class="row clearfix">
                 <!-- Content Column -->
                 <div class="content-column col-lg-6 col-md-12 col-sm-12">
-                  <div class="inner-column">
+                  <div class="inner-column" style="padding: 30px 50px">
                     <h2>
-                      <a href="our_team.html"
+                      <a href="our_services.html"
                         >Commitment To Ethics And Excellence</a
                       >
                     </h2>
-                    <div class="text">
+                    <div class="text text-justify">
                       We set the highest standards for ourselves and strive to
                       exceed your expectations.At Impala Law Firm, you’re not
                       just a client; you’re part of our community. We believe in
@@ -430,14 +389,16 @@
                   </div>
                 </div>
                 <!-- Image Column -->
-                <div class="image-column col-lg-6 col-md-12 col-sm-12">
-                  <div class="inner-column">
-                    <div class="image">
-                      <a href="our_team.html"
+                <div
+                  class="image-column col-lg-6 col-md-12 col-sm-12"
+                  style="height: 480px"
+                >
+                  <div class="inner-column" style="height: 100%">
+                    <div class="image" style="height: 100%">
+                      <a href="our_services.html"
                         ><img
                           src="../images/resource/team-4.jpg"
-                          style="height: 600px"
-                          ;
+                          class="unequal-img"
                       /></a>
                     </div>
                   </div>
@@ -517,11 +478,11 @@
                       <ul>
                         <li>
                           <span class="icon flaticon-call-1"></span>
-                          <a href="tel:+61-3-8376-6284">+971 50 123 4567</a>
+                          <a href="tel:+971-50-123-4567">+971 50 123 4567</a>
                         </li>
                         <li>
                           <span class="icon flaticon-call-1"></span>
-                          <a href="tel:+00-9-0000-9999">+971 55 987 6543</a>
+                          <a href="tel: +971-55-987-6543">+971 55 987 6543</a>
                         </li>
                         <li>
                           <span class="icon flaticon-email-2"></span>
