--- a/pages/our_team.html
+++ b/pages/our_team.html
@@ -91,22 +91,8 @@
                       <a href="our_services.html">Our Services</a>
                     </li>
 
-                    <li class="dropdown">
-                      <a href="#" class="active-btn">Our Team</a>
-                      <ul>
-                        <li><a href="our_team.html#team">Our Team</a></li>
-                        <li>
-                          <a href="our_team.html#client"
-                            >Client-Centric Approach</a
-                          >
-                        </li>
-                        <li><a href="our_team.html#global">Global Reach</a></li>
-                        <li>
-                          <a href="our_team.html#commitment"
-                            >Commitment to Ethics and Excellence</a
-                          >
-                        </li>
-                      </ul>
+                    <li>
+                      <a href="our_team.html" class="active-btn">Our Team</a>
                     </li>
                   </ul>
                 </div>
