still fixing images

--- a/pages/our_team.html
+++ b/pages/our_team.html
@@ -215,8 +215,7 @@
               <div class="row clearfix">
                 <!-- Image Column -->
                 <div
-                  class="image-column col-lg-6 col-md-12 col-sm-12"
-                  style="height: 480px"
+                  class="image-column col-lg-6 col-md-12 col-sm-12 height-img"
                 >
                   <div class="inner-column" style="height: 100%">
                     <div class="image" style="height: 100%">
@@ -282,8 +281,7 @@
                 </div>
                 <!-- Image Column -->
                 <div
-                  class="image-column col-lg-6 col-md-12 col-sm-12"
-                  style="height: 480px"
+                  class="image-column col-lg-6 col-md-12 col-sm-12 height-img"
                 >
                   <div class="inner-column" style="height: 100%">
                     <div class="image" style="height: 100%">
@@ -310,8 +308,7 @@
               <div class="row clearfix">
                 <!-- Image Column -->
                 <div
-                  class="image-column col-lg-6 col-md-12 col-sm-12"
-                  style="height: 480px"
+                  class="image-column col-lg-6 col-md-12 col-sm-12 height-img"
                 >
                   <div class="inner-column" style="height: 100%">
                     <div class="image" style="height: 100%">
@@ -376,8 +373,7 @@
                 </div>
                 <!-- Image Column -->
                 <div
-                  class="image-column col-lg-6 col-md-12 col-sm-12"
-                  style="height: 480px"
+                  class="image-column col-lg-6 col-md-12 col-sm-12 height-img"
                 >
                   <div class="inner-column" style="height: 100%">
                     <div class="image" style="height: 100%">
