--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                   <div class="box-inner">
                     <span class="icon flaticon-smartphone-1"></span>
                     Call US Today!
-                    <strong>+971 50 123 4567</strong>
+                    <strong>+971 (04) 410 7908</strong>
                   </div>
                 </div>
               </div>
@@ -181,7 +181,7 @@
       <!-- Banner Section -->
       <section class="banner-section">
         <!-- Social Nav -->
-        <ul class="social-nav">
+        <!-- <ul class="social-nav">
           <li class="facebook">
             <a href="#"><span class="fa fa-facebook-f"></span></a>
           </li>
@@ -191,7 +191,7 @@
           <li class="linkedin">
             <a href="#"><span class="fa fa-linkedin"></span></a>
           </li>
-        </ul>
+        </ul> -->
         <div class="main-slider-carousel owl-carousel owl-theme">
           <div
             class="slide"
@@ -731,14 +731,14 @@
                     <div class="footer-widget logo-widget">
                       <div class="logo">
                         <a href="index.html"
-                          ><img src="images/logo.png" alt="" class="small-logo-img"
+                          ><img src="images/logo.png" class="small-logo-img"
                         /></a>
                       </div>
                       <div class="text text-justify">
                         For reliable legal assistance, contact Impala Law Associates.
                       </div>
                       <!-- Social Nav -->
-                      <ul class="social-nav">
+                      <!-- <ul class="social-nav">
                         <li>
                           <a href="#"><span class="fa fa-facebook-f"></span></a>
                         </li>
@@ -748,7 +748,7 @@
                         <li>
                           <a href="#"><span class="fa fa-linkedin"></span></a>
                         </li>
-                      </ul>
+                      </ul> -->
                     </div>
                   </div>
 
@@ -759,9 +759,10 @@
                       <ul class="footer-list">
                         <li><a href="#">Home</a></li>
                        
-                        <li><a href="#">News</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="pages/about.html">About Us</a></li>
+                        <li><a href="pages/our_services.html">Our Services</a></li>
+                        <li><a href="pages/our_team.html">Our Team</a></li>
+                        <li><a href="pages/contact.html">Contact Us</a></li>
                       </ul>
                     </div>
                   </div>
@@ -778,22 +779,23 @@
                       <ul>
                         <li>
                           <span class="icon flaticon-call-1"></span>
-                          <a href="tel:+61-3-8376-6284">+971 50 123 4567</a>
+                          <a href="tel:+971-04-410-7908">+971 (04) 410 7908</a>
                         </li>
                         <li>
                           <span class="icon flaticon-call-1"></span>
-                          <a href="tel:+00-9-0000-9999">+971 55 987 6543</a>
+                          <a href="tel:+971-0-58-8101915">+971 (0) 58 8101915</a>
                         </li>
                         <li>
                           <span class="icon flaticon-email-2"></span>
-                          <a href="mailto:Info@counsellawfirm.com"
+                          <a href="mailto:legal@impalalaw.com"
                             >legal@impalalaw.com</a
                           >
                         </li>
                         <li>
                           <span class="icon flaticon-maps-and-flags"></span>
-                          Impala Law Associate & Legal Services 
-                          United Arab Emirates <br> (UAE)
+                          Technic Building 402 Sal Al Din, Dubai United Arab Emirates
+
+
 
                         </li>
                       </ul>
