--- a/pages/contact.html
+++ b/pages/contact.html
@@ -111,7 +111,7 @@
                   <div class="box-inner">
                     <span class="icon flaticon-smartphone-1"></span>
                     Call US Today!
-                    <strong>+971 50 123 4567</strong>
+                    <strong>+971 (04) 410 7908</strong>
                   </div>
                 </div>
               </div>
@@ -280,8 +280,7 @@
                 <div class="icon flaticon-location-pin"></div>
                 <h5>Location</h5>
                 <div class="text">
-                  Impala Law Associate & Legal Services United Arab Emirates
-                  (UAE)
+                  Technic Building 402 Sal Al Din, Dubai United Arab Emirates
                 </div>
               </div>
             </div>
@@ -293,10 +292,10 @@
                 <h5>Phone</h5>
                 <ul class="info-list">
                   <li>
-                    <a href="tel:+971-50-123-4567">+971-50-123-4567</a>
+                    <a href="tel:+971-04-410-7908">+971 (04) 410 7908</a>
                   </li>
                   <li>
-                    <a href="tel:+971-55-987-6543">+971-55-987-6543</a>
+                    <a href="tel:+971-0-58-8101915">+971-0-58-8101915</a>
                   </li>
                 </ul>
               </div>
@@ -312,7 +311,7 @@
                     <a href="mailto:legal@impalalaw.com">legal@impalalaw.com</a>
                   </li>
                   <li>
-                    <a href="mailto:info@counsellaw.com">www.@impalalaw.com</a>
+                    <a href="mailto:legal@impalalaw.com">www.@impalalaw.com</a>
                   </li>
                 </ul>
               </div>
@@ -339,19 +338,16 @@
                   <div class="footer-column col-lg-7 col-md-6 col-sm-12">
                     <div class="footer-widget logo-widget">
                       <div class="logo">
-                        <a href="../index.html"
-                          ><img
-                            src="../images/logo.png"
-                            alt=""
-                            class="small-logo-img"
+                        <a href="index.html"
+                          ><img src="../images/logo.png" class="small-logo-img"
                         /></a>
                       </div>
-                      <div class="text">
+                      <div class="text text-justify">
                         For reliable legal assistance, contact Impala Law
                         Associates.
                       </div>
                       <!-- Social Nav -->
-                      <ul class="social-nav">
+                      <!-- <ul class="social-nav">
                         <li>
                           <a href="#"><span class="fa fa-facebook-f"></span></a>
                         </li>
@@ -361,7 +357,7 @@
                         <li>
                           <a href="#"><span class="fa fa-linkedin"></span></a>
                         </li>
-                      </ul>
+                      </ul> -->
                     </div>
                   </div>
 
@@ -370,11 +366,12 @@
                     <div class="footer-widget links-widget">
                       <h5>Useful links</h5>
                       <ul class="footer-list">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="../index.html">Home</a></li>
 
-                        <li><a href="#">News</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="our_services.html">Our Services</a></li>
+                        <li><a href="our_team.html">Our Team</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                     </div>
                   </div>
@@ -391,23 +388,24 @@
                       <ul>
                         <li>
                           <span class="icon flaticon-call-1"></span>
-                          <a href="tel:+61-3-8376-6284">+971 50 123 4567</a>
+                          <a href="tel:+971-04-410-7908">+971 (04) 410 7908</a>
                         </li>
                         <li>
                           <span class="icon flaticon-call-1"></span>
-                          <a href="tel:+00-9-0000-9999">+971 55 987 6543</a>
+                          <a href="tel:+971-0-58-8101915"
+                            >+971 (0) 58 8101915</a
+                          >
                         </li>
                         <li>
                           <span class="icon flaticon-email-2"></span>
-                          <a href="mailto:Info@counsellawfirm.com"
+                          <a href="mailto:legal@impalalaw.com"
                             >legal@impalalaw.com</a
                           >
                         </li>
                         <li>
                           <span class="icon flaticon-maps-and-flags"></span>
-                          Impala Law Associate & Legal Services United Arab
-                          Emirates <br />
-                          (UAE)
+                          Technic Building 402 Sal Al Din, Dubai United Arab
+                          Emirates
                         </li>
                       </ul>
                     </div>
@@ -417,7 +415,7 @@
                   <div class="footer-column col-lg-6 col-md-6 col-sm-12">
                     <div class="footer-widget newsletter-widget">
                       <h5>Subscribe Now</h5>
-                      <div class="text">
+                      <div class="text text-justify">
                         Give us a call, send an email, or drop by for a chat.
                         We’re always happy to help navigate your legal journey
                         and ensure you feel informed and empowered every step of
