--- a/pages/our_services.html
+++ b/pages/our_services.html
@@ -111,7 +111,7 @@
                   <div class="box-inner">
                     <span class="icon flaticon-smartphone-1"></span>
                     Call US Today!
-                    <strong>+971 50 123 4567</strong>
+                    <strong>+971 (04) 410 7908</strong>
                   </div>
                 </div>
               </div>
@@ -670,19 +670,15 @@
                   <div class="footer-column col-lg-7 col-md-6 col-sm-12">
                     <div class="footer-widget logo-widget">
                       <div class="logo">
-                        <a href="../index.html"
-                          ><img
-                            src="../images/logo.png"
-                            alt=""
-                            class="small-logo-img"
+                        <a href="index.html"
+                          ><img src="../images/logo.png" class="small-logo-img"
                         /></a>
                       </div>
                       <div class="text text-justify">
-                        For reliable legal assistance, contact Impala Law
-                        Associates.
+                        For reliable legal assistance, contact Impala Law Associates.
                       </div>
                       <!-- Social Nav -->
-                      <ul class="social-nav">
+                      <!-- <ul class="social-nav">
                         <li>
                           <a href="#"><span class="fa fa-facebook-f"></span></a>
                         </li>
@@ -692,7 +688,7 @@
                         <li>
                           <a href="#"><span class="fa fa-linkedin"></span></a>
                         </li>
-                      </ul>
+                      </ul> -->
                     </div>
                   </div>
 
@@ -701,11 +697,12 @@
                     <div class="footer-widget links-widget">
                       <h5>Useful links</h5>
                       <ul class="footer-list">
-                        <li><a href="#">Home</a></li>
-
-                        <li><a href="#">News</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                       
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="our_services.html">Our Services</a></li>
+                        <li><a href="our_team.html">Our Team</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                     </div>
                   </div>
@@ -722,37 +719,36 @@
                       <ul>
                         <li>
                           <span class="icon flaticon-call-1"></span>
-                          <a href="tel:+61-3-8376-6284">+971 50 123 4567</a>
+                          <a href="tel:+971-04-410-7908">+971 (04) 410 7908</a>
                         </li>
                         <li>
                           <span class="icon flaticon-call-1"></span>
-                          <a href="tel:+00-9-0000-9999">+971 55 987 6543</a>
+                          <a href="tel:+971-0-58-8101915">+971 (0) 58 8101915</a>
                         </li>
                         <li>
                           <span class="icon flaticon-email-2"></span>
-                          <a href="mailto:Info@counsellawfirm.com"
+                          <a href="mailto:legal@impalalaw.com"
                             >legal@impalalaw.com</a
                           >
                         </li>
                         <li>
                           <span class="icon flaticon-maps-and-flags"></span>
-                          Impala Law Associate & Legal Services United Arab
-                          Emirates <br />
-                          (UAE)
+                          Technic Building 402 Sal Al Din, Dubai United Arab Emirates
+
+
+
                         </li>
                       </ul>
                     </div>
                   </div>
+                  
 
                   <!-- Footer Column -->
                   <div class="footer-column col-lg-6 col-md-6 col-sm-12">
                     <div class="footer-widget newsletter-widget">
                       <h5>Subscribe Now</h5>
                       <div class="text text-justify">
-                        Give us a call, send an email, or drop by for a chat.
-                        We’re always happy to help navigate your legal journey
-                        and ensure you feel informed and empowered every step of
-                        the way.
+                        Give us a call, send an email, or drop by for a chat. We’re always happy to help navigate your legal journey and ensure you feel informed and empowered every step of the way.
                       </div>
                       <div class="newsletter-form">
                         <form method="post" action="contact.html">
@@ -786,8 +782,7 @@
         <div class="footer-bottom">
           <div class="auto-container">
             <div class="copyright">
-              &copy; Copyright 2023, Impala law associates & legal services. All
-              Rights Reserved.
+              &copy; Copyright 2023, Impala law associates & legal services. All Rights Reserved.
             </div>
           </div>
         </div>
